--- a/my-website/src/pages/Main.css
+++ b/my-website/src/pages/Main.css
@@ -1,7 +1,25 @@
+/* Apply to the entire body */
+body {
+    margin: 0; /* Remove default margin */
+    overflow-x: hidden; /* Prevent horizontal overflow */
+}
+
+/* Main container */
+.website {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw; /* Full viewport width */
+    overflow-x: hidden; /* Prevent horizontal overflow */
+}
+
 /* Main content container */
 .content {
     display: flex;
-    height: 100vh; /* Adjust as needed */
+    flex: 1;
+    position: relative;
+    width: 100%; /* Ensure full width */
+    overflow-x: hidden; /* Prevent horizontal overflow */
     background-color: rgb(17, 17, 17);
 }
 
@@ -9,9 +27,10 @@
 .main-content {
     flex: 1;
     padding: 20px;
-    box-sizing: border-box;
+    box-sizing: border-box; /* Include padding and border in the element's total width and height */
     display: flex;
     flex-direction: column;
+    width: 100%; /* Ensure full width */
 }
 
 /* Header */
@@ -20,30 +39,23 @@
     color: #ffffff;
     padding: 20px;
     text-align: left;
-    width: 100%;
+    width: 100%; /* Ensure full width */
     z-index: 50; /* Ensure header is below sidebar */
     position: relative; /* Ensures stacking context */
 }
 
-.website {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-}
-
-.content {
-    display: flex;
-    flex: 1;
-    position: relative;
-}
-
+/* Sidebar */
 .sidebar {
     z-index: 2; /* Ensure sidebar is above the particle background */
+    width: 15%; /* Ensure full width */
+    box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
 
+/* Home Page */
 .home-page {
     flex: 1;
     position: relative;
     z-index: 1; /* Ensure content is above the particle background */
+    width: 100%; /* Ensure full width */
+    box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
-
